adicionei um paragrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -9,6 +9,7 @@
     <h1>Olá, mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem inventore sapiente odit esse corrupti in perferendis, ipsum impedit minus quidem! Alias doloribus recusandae delectus, minima maiores dolor molestias nihil eligendi!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam amet, possimus vero recusandae provident deserunt consequuntur laborum neque officia dolores, voluptatem doloremque optio aspernatur nostrum ipsum doloribus velit distinctio explicabo.</p>
 
 </body>
 </html>
